--- a/appinfo.json
+++ b/appinfo.json
@@ -15,27 +15,6 @@
     "city": 3
   },
   "resources": {
-    "media": [
-      {
-        "type": "png",
-        "name": "IMAGE_SUN",
-        "file": "img/sun.png"
-      },
-      {
-        "type": "png",
-        "name": "IMAGE_RAIN",
-        "file": "img/rain.png"
-      },
-      {
-        "type": "png",
-        "name": "IMAGE_CLOUD",
-        "file": "img/cloud.png"
-      },
-      {
-        "type": "png",
-        "name": "IMAGE_SNOW",
-        "file": "img/snow.png"
-      }
-    ]
+    "media": []
   }
 }
